tests/e2e/corpus/err_arity.err
[line 2] runtime error: expected 2 arguments but got 1
