tests/e2e/corpus/err_arity.lum
fun f(a, b) { return a + b; }
f(1);
